--- a/about.html
+++ b/about.html
@@ -153,6 +153,7 @@
     <div class="container-fluid">
       <ol class="breadcrumb">
         <li class="breadcrumb-item active">Dashboard</li>
+        <li class="breadcrumb-item">About</li>
       </ol>
     </div>
 
